# emblocs-projects

./: .gitignore  .gitmodules  ARCHITECTURE.md  README.md  dirtree.txt  g431-esc1-bare.code-workspace  pi-pico-bare-refactor.code-workspace  pi-pico-bare.code-workspace  pi-pico-sdk-cmdline.code-workspace  pi-pico-sdk-vscode.code-workspace
projects/: README.md
projects/F103-bluepill-bare/: README.md
projects/F103-bluepill-freertos/: README.md
projects/G431-ESC1-bare/: CMakeLists.txt  FindSTM32G4.cmake  Makefile  README.md  blink.blocs  debug.cfg  flash.cfg  main.c  platform.c  platform.h  system_stm32g4xx.c
projects/G431-ESC1-bare-make/: README.md  openocd.cfg  platform.c
projects/G431-ESC1-freertos/: README.md
projects/G474-weact-bare/: README.md
projects/G474-weact-freertos/: README.md
projects/pi-pico-bare/: CMakeLists.txt  README.md  configure.bat  local.cmake.template  main.c
projects/pi-pico-bare-refactor/: CMakeLists.txt  README.md  configure.bat  main.c
projects/pi-pico-freertos/: README.md
projects/pi-pico-sdk-cmdline/: CMakeLists.txt  README.md  blink.blocs  debug.cfg  emblocs.json  flash.cfg  main.c
projects/pi-pico-sdk-vscode/: CMakeLists.txt  README.md  blink.blocs  main.c
utils/: stm32-crc16.c  stm32-crc16.h
